# routeforge

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASE_NOTES.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_users_and_report_ownership.py  0003_change_cases.py  0004_watch_mode.py  0005_providers_and_changecase_workflow.py
backend/app/: config.py  main.py  models.py  schemas.py
backend/app/api/: routes_audit.py  routes_auth.py  routes_change_cases.py  routes_checks.py  routes_health.py  routes_reports.py  routes_system.py  routes_users.py  routes_watch.py
backend/app/cli/: main.py
backend/app/core/: audit.py  auth.py  holder_extraction.py  normalize.py  prefix_evaluation.py  preflight_evaluation.py  recommendations.py  security.py  source_diagnostics.py  status.py  system_status.py
backend/app/services/: alerting.py  asn_checker.py  bgp_visibility_service.py  cache.py  prefix_checker.py  preflight_checker.py  (+8 more)
backend/scripts/: check_deployment_health.py  check_upgrade_path.py
backend/tests/: test_api_smoke.py  test_holder_extraction.py  test_normalize.py  test_prefix_overall_evaluation.py  test_prefix_validation.py  test_preflight_evaluation.py  test_registry_checker.py  test_release_cleanup_guards.py  test_ripe_stat_client.py  test_routing_visibility_checker.py  test_rpki_mapping.py  test_source_diagnostics.py  test_watch_mode.py
(+51 files in other folders)
