[project]
name = "routeforge-backend"
version = "1.0.1"
description = "RouteForge backend"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "jinja2>=3.1.0",
  "typer>=0.12.0",
  "passlib[bcrypt]>=1.7.4",
  "python-jose>=3.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
routeforge = "app.cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
